--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,17 @@
 body {
     background-color: #9e9696;
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 2em;
 }
 
 h1 {
-    font-size: 34px;
+    margin-left: 12px;
 }
-h2 {
-    font-size: 24px;
+ul li {
+    padding: 8px;
+    margin-left: 48px;
 }
 
-div li {
-    font-size: 16px;
-    padding: 4px;
-}
 
 img {
     width: 400px;
@@ -36,7 +32,7 @@ nav li {
 }
 a {
     text-decoration: none;
-    font-size: 2em;
+    font-size: 32px;
     color: rgb(2, 2, 63);
 
 }
